--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial; 
-  background-color: lightblue;   
+  background-color: Black;   
   margin-top: 50px;
   margin-bottom: 50px;
 }
@@ -10,7 +10,23 @@ body {
   margin-left:10px;
 }
 
-.container {
+.container_1 {
+  background-color: red;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left:30px;
+  margin-right:30px;
+  padding: 20px;
+}
+.container_2 {
+  background-color: white;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left:30px;
+  margin-right:30px;
+  padding: 20px;
+}
+.container_3 {
   background-color: white;
   margin-top: 10px;
   margin-bottom: 10px;
