--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,21 @@
 body {
   font-family: Arial; 
-  background-color: Black;   
+  background-color: lightblue;   
   margin-top: 50px;
   margin-bottom: 50px;
 }
 
 .nav li {
+  text-align:center;
   display:inline;
   margin-left:10px;
 }
 
 .container_1 {
-  background-color: red;
+  background-color: White;
+  border-style:solid;
+  border-width:1px;
+  border-color:black;
   margin-top: 10px;
   margin-bottom: 10px;
   margin-left:30px;
