--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 
 .nav li {
   display:inline;
-  margin-left:10px;
+  margin:auto;
 }
 
 .container_1 {
@@ -30,4 +30,22 @@ body {
   border-color:black;
   margin-left:30px;
   margin-right:30px;
+  height:50px;
+}
+.head_button {
+  background-color:white;
+  margin:auto;
+  width:100px;
+  height:30px;
+  text-align:center;
+  vertical-align:text-bottom;
+  float:left;
+}
+.head_button:hover {
+  background-color:blue;
+  color:White;
+  margin:auto;
+}
+.head_button:visited {
+  color:White;
 }
