--- a/css/style.css
+++ b/css/style.css
@@ -5,47 +5,44 @@ body {
   margin-bottom: 50px;
 }
 
-.nav li {
-  display:inline;
-  margin:auto;
-}
-
 .container_1 {
-  background-color: White;
+  color: white;
+  background-color: #333;
   border-style:solid;
   border-width:1px;
   border-color:black;
-  margin-top: 1px;
-  margin-bottom: 10px;
-  margin-left:30px;
-  margin-right:30px;
+  margin:auto;
   padding: 20px;
-}
-.picture_box {
+  width:700px;
 }
 .head {
-  background-color: White;
+  margin:auto;
   border-style:solid;
   border-width:1px;
   border-color:black;
-  margin-left:30px;
-  margin-right:30px;
-  height:50px;
+  margin-bottom:10px;
+  width:740px;
 }
-.head_button {
-  background-color:white;
-  margin:auto;
-  width:100px;
-  height:30px;
-  text-align:center;
-  vertical-align:text-bottom;
-  float:left;
+.head ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
 }
-.head_button:hover {
-  background-color:blue;
-  color:White;
-  margin:auto;
+
+.head li {
+    float: left;
 }
-.head_button:visited {
-  color:White;
+
+.head li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.head li a:hover {
+    background-color: #111;
 }
