--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
 body {
   font-family: Arial; 
-  background-color: lightblue;   
   margin-top: 50px;
   margin-bottom: 50px;
+  background-image: url("../images/background.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size:cover;
 }
 
 .container_1 {
@@ -14,6 +17,9 @@ body {
   margin:auto;
   padding: 20px;
   width:700px;
+}
+a:visited {
+  color: white;
 }
 .head {
   margin:auto;
